@@ -21,7 +21,7 @@
 
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.7.1"
+       version="2.7.2"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
